# Ransomware

./: .gitignore  Cargo.toml  README.md  build.rs  easy-launcher.bat  run.bat  run.sh
.github/: copilot-instructions.md
Research/: Makefile  README.md  main.aux  main.out  main.tex  main.toc  references.bib
src/: bootkit.rs  config.rs  crypto.rs  data_thief.rs  dropper.rs  injection.rs  main.rs  persistence.rs  ransom_note.rs  reflective.rs  rootkit.rs  stealth_comm.rs  traversal.rs  web.rs  wiper.rs
static/: index.html
